--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.4",
   "description": "Front-matter parser.",
   "main": "index",
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "test": "make test"
   },
