--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexo-front-matter",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "Front-matter parser.",
   "main": "lib/front_matter",
   "scripts": {
@@ -15,6 +15,7 @@
   "repository": "hexojs/front-matter",
   "keywords": [
     "front-matter",
+    "front matter",
     "yaml",
     "yml",
     "hexo"
