--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-mocha": "^2.0.0",
     "jshint-stylish": "^1.0.0",
     "mocha": "^2.0.1",
+    "moment": "^2.8.4",
     "rimraf": "^2.2.8"
   }
 }
