Use eslint-config-hexo and jscs-preset-hexo

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Front-matter parser.",
   "main": "lib/front_matter",
   "scripts": {
-    "test": "gulp test"
+    "eslint": "eslint .",
+    "jscs": "jscs .",
+    "test": "mocha test/index.js",
+    "test-cov": "istanbul cover --print both _mocha -- test/index.js"
   },
   "directories": {
     "lib": "./lib"
-  },
-  "engines": {
-    "node": ">= 0.10.0"
   },
   "repository": "hexojs/hexo-front-matter",
   "keywords": [
@@ -28,15 +28,11 @@
   },
   "devDependencies": {
     "chai": "^1.9.1",
-    "coveralls": "^2.11.2",
-    "gulp": "^3.8.9",
-    "gulp-istanbul": "^0.5.0",
-    "gulp-jshint": "^1.8.6",
-    "gulp-load-plugins": "^0.8.0",
-    "gulp-mocha": "^2.0.0",
-    "jshint-stylish": "^1.0.0",
+    "eslint": "^1.10.3",
+    "eslint-config-hexo": "^1.0.2",
+    "jscs": "^2.6.0",
+    "jscs-preset-hexo": "^1.0.1",
     "mocha": "^2.0.1",
-    "moment": "^2.8.4",
-    "rimraf": "^2.2.8"
+    "moment": "^2.8.4"
   }
 }
