--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
   "author": "Tommy Chen <tommy351@gmail.com> (http://zespia.tw)",
   "license": "MIT",
   "dependencies": {
-    "js-yaml": "^3.2.5"
+    "js-yaml": "^3.4.6"
   },
   "devDependencies": {
-    "chai": "^1.9.1",
+    "chai": "^3.4.1",
     "eslint": "^1.10.3",
     "eslint-config-hexo": "^1.0.2",
+    "istanbul": "^0.4.1",
     "jscs": "^2.6.0",
     "jscs-preset-hexo": "^1.0.1",
-    "mocha": "^2.0.1",
-    "moment": "^2.8.4"
+    "mocha": "^2.3.4",
+    "moment": "^2.10.6"
   }
 }
