Update support node version
* set engines v6.9.0 higher
* drop 0.12 & 4 and support 8 and latest LTS on travis CI

--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "jscs-preset-hexo": "^1.0.1",
     "mocha": "^2.5.3",
     "moment": "^2.13.0"
+  },
+  "engines": {
+    "node": ">=6.9.0"
   }
 }
