--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "eslint": "eslint .",
     "test": "mocha test/index.js",
-    "test-cov": "istanbul cover --print both _mocha -- test/index.js"
+    "test-cov": "nyc npm run test"
   },
   "directories": {
     "lib": "./lib"
@@ -32,9 +32,9 @@
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-hexo": "^3.0.0",
-    "istanbul": "^0.4.5",
     "mocha": "^6.1.4",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "nyc": "^14.1.1"
   },
   "engines": {
     "node": ">=8.6.0"
