--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "eslint": "eslint .",
     "test": "mocha test/index.js",
-    "test-cov": "nyc --reporter=lcovonly npm run test"
+    "test-cov": "c8 --reporter=lcovonly npm run test"
   },
   "directories": {
     "lib": "./lib"
@@ -29,12 +29,12 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
+    "c8": "^7.12.0",
     "chai": "^4.3.6",
     "eslint": "^8.23.1",
     "eslint-config-hexo": "^5.0.0",
     "mocha": "^10.0.0",
-    "moment": "^2.29.4",
-    "nyc": "^15.0.0"
+    "moment": "^2.29.4"
   },
   "engines": {
     "node": ">=14"
