--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "chai": "^4.3.6",
     "eslint": "^8.23.1",
     "eslint-config-hexo": "^5.0.0",
-    "mocha": "^10.0.0",
-    "moment": "^2.29.4"
+    "mocha": "^10.0.0"
   },
   "engines": {
     "node": ">=14"
