--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "hexo-front-matter",
   "version": "4.0.0",
   "description": "Front-matter parser.",
-  "main": "lib/front_matter",
+  "main": "dist/front_matter",
   "scripts": {
+    "prepublish ": "npm run clean && npm run build",
+    "build": "tsc -b",
+    "clean": "tsc -b --clean",
     "eslint": "eslint .",
-    "test": "mocha test/index.js",
+    "pretest": "npm run clean && npm run build",
+    "test": "mocha test/index.js --require ts-node/register",
     "test-cov": "c8 --reporter=lcovonly npm run test"
   },
   "directories": {
@@ -29,11 +33,17 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.5",
+    "@types/node": "^18.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "c8": "^7.12.0",
     "chai": "^4.3.6",
     "eslint": "^8.23.1",
     "eslint-config-hexo": "^5.0.0",
-    "mocha": "^10.0.0"
+    "mocha": "^10.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=14"
