--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,3 +1,7 @@
 {
-  "extends": "hexo/test"
+  "extends": "hexo/test",
+  "rules": {
+    "@typescript-eslint/no-var-requires": 0,
+    "@typescript-eslint/no-empty-function": 0
+  }
 }
