chore: update `package.json` for release typescript package

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "lib": "./lib"
   },
   "files": [
-    "lib/"
+    "dist/**"
   ],
+  "types": "./dist/front_matter.d.ts",
   "repository": "hexojs/hexo-front-matter",
   "keywords": [
     "front-matter",
