--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "eslint": "eslint .",
     "pretest": "npm run clean && npm run build",
     "test": "mocha test/index.js --require ts-node/register",
-    "test-cov": "c8 --reporter=lcovonly npm run test"
+    "test-cov": "c8 --reporter=lcovonly npm run test",
+    "prepare": "husky install"
   },
   "files": [
     "dist"
@@ -39,6 +40,8 @@
     "chai": "^4.3.6",
     "eslint": "^8.23.1",
     "eslint-config-hexo": "^5.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
