--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b",
     "clean": "tsc -b --clean",
     "eslint": "eslint .",
-    "test": "mocha test/index.js --require ts-node/register",
+    "test": "mocha",
     "test-cov": "c8 --reporter=lcovonly npm run test"
   },
   "files": [
@@ -30,10 +30,12 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.11",
     "@types/js-yaml": "^4.0.5",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^18.11.7",
     "c8": "^9.1.0",
-    "chai": "^4.3.6",
+    "chai": "^5.0.0",
     "eslint": "^8.23.1",
     "eslint-config-hexo": "^5.0.0",
     "mocha": "^10.0.0",
