--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
   "author": "Tommy Chen <tommy351@gmail.com> (http://zespia.tw)",
   "license": "MIT",
   "dependencies": {
-    "js-yaml": "^4.1.0"
+    "luxon": "^3.6.1",
+    "yaml": "2.7.1"
   },
   "devDependencies": {
     "@types/chai": "^5.0.1",
-    "@types/js-yaml": "^4.0.5",
+    "@types/luxon": "^3.6.2",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^18.11.7",
+    "@types/node": "^22.14.0",
     "c8": "^10.1.2",
     "chai": "^6.2.0",
     "eslint": "^8.23.1",
