chore: use object format for repository field in `package.json`

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "dist/**"
   ],
   "types": "./dist/front_matter.d.ts",
-  "repository": "hexojs/hexo-front-matter",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hexojs/hexo-front-matter.git"
+  },
   "keywords": [
     "front-matter",
     "front matter",
